# mirrorview

./: .gitignore  Dockerfile
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  prompts.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_persistence_tables.py  0002_add_model_ids_to_submissions_and_generations.py
backend/app/: __init__.py  main.py  schemas.py  security.py
backend/app/api/routers/: __init__.py  examples.py  feedback.py  generate.py
backend/app/db/: migrate.py  session.py  uow.py
backend/app/db/models/: __init__.py  base.py  edit_feedback_event.py  generation.py  submission.py  thumb_feedback_event.py
backend/app/db/repos/: __init__.py  interfaces.py  noop.py  null.py
backend/app/di/: providers.py
backend/app/examples/: __init__.py  catalog.json  loader.py
backend/app/services/: feedback_service.py  generation_service.py
backend/lib/: constants.py  load_env_vars.py
backend/lib/aws/: secretsmanager.py
backend/ml_tooling/llm/: exceptions.py  llm_service.py  retry.py
backend/ml_tooling/llm/config/: model_registry.py  models.yaml
backend/ml_tooling/llm/providers/: anthropic_provider.py  base.py  gemini_provider.py  groq_provider.py  provider_base.py  (+5 more)
backend/tests/: conftest.py  test_db_session.py  test_di_providers_null_repos.py  test_examples_api.py  test_feedback_edit.py  test_feedback_service.py  test_feedback_thumb.py  test_generate_response.py  test_generation_service.py  test_llm_provider_refactor.py  test_model_registry.py  test_persistence_integration.py  test_security_controls.py
(+19 files in other folders)
