[project]
name = "mirrorview-backend"
version = "0.1.0"
description = "MirrorView FastAPI backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "python-dotenv",
  "sqlalchemy[asyncio]",
  "asyncpg",
  "alembic",
  "litellm",
  "openai",
  "tenacity",
  "pyyaml",
  "boto3",
]

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "httpx",
  "testcontainers",
]

[tool.ruff]
line-length = 100
target-version = "py310"

